# ipl

./: Anchor.toml  package.json  pnpm-lock.yaml
idl/: squircl_did.json
programs/squircl-did/: Cargo.toml
programs/squircl-did/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/squircl-did/src/instructions/: add_address.rs  create_did.rs  issue_credential.rs  remove_address.rs  revoke_credential.rs  update_credential.rs
programs/squircl-did/src/state/: credential.rs  did.rs  utils.rs
programs/squircl-identity/: Cargo.toml
programs/squircl-identity/src/: lib.rs
tests/: squircl_did.ts  squircl_identity.ts
tests/did/: addAddress.ts  createDID.ts  issueCredential.ts  removeAddress.ts
tests/utils/: instructions.ts  pda.ts  signatures.ts
types/: squircl_did.ts
