[package]
name = "squircl-did"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squircl_did"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
bs58 = "0.5.0"
ed25519 = "2.2.1"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
getrandom = { version = "0.1.16", features = ["dummy"] }
